[project]
name = "img-rec-exp-ver2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "ipywidgets==8.1.8",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pillow==12.0.0",
]

[tool.ruff]
line-length = 119
select = ["ALL"]
ignore = [
    "D",
    "PLR0913",
    "ANN002",
    "ANN003",
    "ANN101",
]
target-version = "py313"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ANN201",
    "N802",
    "ARG",
]

[tool.ruff.pydocstyle]
convention = "google"
